--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -3,6 +3,7 @@ import GridWrapper from "./GridWrapper.astro";
 import lightedEarth from "../assets/lighted earth.avif";
 import heatedEarth from "../assets/heated earth.avif";
 import Card from "./Card.astro";
+import BackgroundGradient from "./BackgroundGradient.astro";
 ---
 
 <section id="solutions">
@@ -200,8 +201,8 @@ import Card from "./Card.astro";
       linear-gradient(
         135deg,
         rgba(255, 199, 201, 0.3) 0%,
-        rgba(255, 251, 163, 0.5) 60%,
-        rgba(206, 255, 128, 0.5) 100%
+        rgba(255, 251, 163, 0.75) 60%,
+        rgba(206, 255, 128, 0.75) 100%
       );
     container-type: inline-size;
     padding-bottom: 3rem;
