--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -1,4 +1,5 @@
 ---
+import BackgroundGradient from "./BackgroundGradient.astro";
 import GridWrapper from "./GridWrapper.astro";
 ---
 
@@ -150,18 +151,25 @@ import GridWrapper from "./GridWrapper.astro";
       </svg>
     </div>
   </GridWrapper>
+  <BackgroundGradient
+    color1="hsl(75 100% 50% / 17.5%)"
+    color2="hsl(350 100% 50% / 10%)"
+  />
 </section>
 
 <style>
   section {
     background: rgb(255, 199, 201);
     background: linear-gradient(
-      135deg,
-      rgba(255, 199, 201, 0.35) 0%,
-      rgba(255, 251, 163, 0.35) 60%,
-      rgba(206, 255, 128, 0.35) 100%
-    );
+        135deg,
+        rgba(255, 199, 201, 0.35) 0%,
+        rgba(255, 251, 163, 0.35) 60%,
+        rgba(206, 255, 128, 0.35) 100%
+      ),
+      #fff;
     position: relative;
+    z-index: -10;
+    overflow: hidden;
   }
   .text-wrapper {
     display: flex;
