--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -3,7 +3,9 @@
 ---
 
 <div class="loading-screen">
-  <div class="picture-wrapper"></div>
+  <div class="picture-wrapper">
+    <canvas id="solarSystem" width="1100" height="1100"></canvas>
+  </div>
 </div>
 
 <style>
@@ -24,22 +26,26 @@
   }
 
   .picture-wrapper {
-    width: 75vw;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  canvas {
+    width: 35vw;
+  }
 </style>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    const loadingScreen = document.querySelector(".loading-screen") as any;
+    const body = document.querySelector("body");
+    const loadingScreen = document.querySelector(".loading-screen");
     let startTime = performance.now();
 
     function hideLoadingScreen() {
       requestAnimationFrame(() => {
         loadingScreen.classList.add("fade-out");
+        body.style.overflow = "auto";
       });
     }
 
@@ -62,4 +68,67 @@
       loadingScreen.style.display = "none";
     });
   });
+
+  const canvas = document.getElementById("solarSystem");
+  const ctx = canvas.getContext("2d");
+
+  class Planet {
+    constructor(radius, distance, speed) {
+      this.radius = radius;
+      this.distance = distance;
+      this.speed = speed;
+      this.angle = Math.random() * Math.PI * 2; // ランダムな初期位置
+    }
+
+    update() {
+      this.angle += this.speed;
+      const x = Math.cos(this.angle) * this.distance + canvas.width / 2;
+      const y = Math.sin(this.angle) * this.distance + canvas.height / 2;
+
+      ctx.beginPath();
+      ctx.arc(x, y, this.radius, 0, Math.PI * 2);
+      ctx.fillStyle = "hsl(45 100% 50%)";
+      ctx.fill();
+    }
+
+    drawOrbit() {
+      ctx.beginPath();
+      ctx.arc(
+        canvas.width / 2,
+        canvas.height / 2,
+        this.distance,
+        0,
+        Math.PI * 2
+      );
+      ctx.strokeStyle = "hsl(20 100% 50% / 0.1)";
+      ctx.lineWidth = 1;
+      ctx.stroke();
+    }
+  }
+
+  const sun = new Planet(15, 0, 0);
+  const planets = [
+    new Planet(2, 60, 0.094),
+    new Planet(4, 90, 0.07),
+    new Planet(4, 120, 0.058),
+    new Planet(3, 160, 0.048),
+    new Planet(10, 220, 0.026),
+    new Planet(9, 280, 0.018),
+    new Planet(7, 340, 0.012),
+    new Planet(7, 400, 0.01),
+  ];
+
+  function animate() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // 軌道を描画
+    planets.forEach((planet) => planet.drawOrbit());
+
+    sun.update();
+    planets.forEach((planet) => planet.update());
+
+    requestAnimationFrame(animate);
+  }
+
+  animate();
 </script>
