--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -32,7 +32,13 @@
     transform: translate(-50%, -50%);
   }
   canvas {
-    width: 35vw;
+    width: 90vw;
+    @media (min-width: 768px) {
+      width: 60vw;
+    }
+    @media (min-width: 1100px) {
+      width: 35vw;
+    }
   }
 </style>
 
