--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 const { title, description } = Astro.props;
+import SmoothScroll from "../components/SmoothScroll.astro";
 ---
 
 <!doctype html>
@@ -17,6 +18,7 @@ const { title, description } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <SmoothScroll />
     <slot />
   </body>
 </html>
