ローディングアニメーションの調整

--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -106,7 +106,7 @@
         0,
         Math.PI * 2
       );
-      ctx.strokeStyle = "hsl(20 100% 50% / 0.1)";
+      ctx.strokeStyle = "hsl(20 100% 50% / 0.35)";
       ctx.lineWidth = 1;
       ctx.stroke();
     }
@@ -114,13 +114,13 @@
 
   const sun = new Planet(15, 0, 0);
   const planets = [
-    new Planet(2, 60, 0.094),
+    /* new Planet(2, 60, 0.094),
     new Planet(4, 90, 0.07),
-    new Planet(4, 120, 0.058),
-    new Planet(3, 160, 0.048),
+    new Planet(4, 120, 0.058), */
+    /* new Planet(3, 160, 0.048), */
     new Planet(10, 220, 0.026),
-    new Planet(9, 280, 0.018),
-    new Planet(7, 340, 0.012),
+    /* new Planet(9, 280, 0.018),
+    new Planet(7, 340, 0.012), */
     new Planet(7, 400, 0.01),
   ];
 
