--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -128,26 +128,10 @@ import GridWrapper from "./GridWrapper.astro";
                 cx="628.518"
                 cy="317.839"
                 r="132.161"
-                style="fill:url(#_Linear1);"></circle>
+                style="fill:hsl(50 100% 50%);"></circle>
             </g>
           </g>
         </g>
-        <defs>
-          <linearGradient
-            id="_Linear1"
-            x1="0"
-            y1="0"
-            x2="1"
-            y2="0"
-            gradientUnits="userSpaceOnUse"
-            gradientTransform="matrix(2.44022e-14,398.518,-398.518,2.44022e-14,628.518,122.391)"
-            ><stop offset="0" style="stop-color:rgb(254,255,22);stop-opacity:1"
-            ></stop><stop
-              offset="1"
-              style="stop-color:rgb(255,157,0);stop-opacity:1"
-            ></stop></linearGradient
-          >
-        </defs>
       </svg>
     </div>
   </GridWrapper>
