--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,18 +1,27 @@
 ---
 const { title, description } = Astro.props;
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const socialImageURL = new URL("/sunshine-solutions/images/ogp.png", Astro.url);
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
     <link
       rel="icon"
       type="image/svg+xml"
       href="/sunshine-solutions/favicon.svg"
     />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta property="og:title" content="Sunshine Solutions" />
+    <meta property="og:description" content="A conceptual business website" />
+    <meta property="og:image" content={socialImageURL} />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:type" content="website" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
