--- a/src/components/P5Sketch.astro
+++ b/src/components/P5Sketch.astro
@@ -8,7 +8,7 @@
   import p5 from "p5";
   const container = document.getElementById("sketch-container");
   const windowWidth = window.innerWidth;
-  const sketch = (p: p5) => {
+  const sketch = (p) => {
     let stars = [];
     let milkyWay = [];
     let numStars = 500;
