canvasのデバイスピクセル比の調整

--- a/src/components/CanvasSolar.astro
+++ b/src/components/CanvasSolar.astro
@@ -8,6 +8,7 @@
   const canvas = document.getElementById("solarSystem") as HTMLCanvasElement;
   const ctx = canvas.getContext("2d");
   const parent = canvas.parentElement;
+  const dpr = window.devicePixelRatio || 1;
 
   function debounce(func, wait) {
     let timeout;
@@ -22,8 +23,14 @@
   }
 
   function resizeCanvas() {
-    canvas.width = parent.clientWidth;
-    canvas.height = parent.clientHeight;
+    const logicalWidth = parent.clientWidth;
+    const logicalHeight = parent.clientHeight;
+
+    canvas.width = logicalWidth * dpr;
+    canvas.height = logicalHeight * dpr;
+
+    canvas.style.width = `${logicalWidth}px`;
+    canvas.style.height = `${logicalHeight}px`;
   }
 
   resizeCanvas();
@@ -38,8 +45,8 @@
     color: string;
 
     constructor(radius, distance, speed, color) {
-      this.radius = radius;
-      this.distance = distance;
+      this.radius = radius * dpr;
+      this.distance = distance * dpr;
       this.speed = speed;
       this.angle = Math.random() * Math.PI * 2; // ランダムな初期位置
       this.color = color;
@@ -65,13 +72,13 @@
         0,
         Math.PI * 2
       );
-      ctx.strokeStyle = "hsl(45 100% 70% / 0.3)";
+      ctx.strokeStyle = "hsl(45 100% 50% / 0.3)";
       ctx.lineWidth = 1;
       ctx.stroke();
     }
   }
 
-  const sun = new Planet(15, 0, 0, "hsl(350 100% 50% / 0.8)");
+  const sun = new Planet(12, 0, 0, "hsl(330 100% 50% )");
   const planets = [
     new Planet(2, 60, 0.0102, "hsl(45 0% 80%)"),
     new Planet(4, 90, 0.0075, "hsl(35 100% 50%)"),
