不要なコードの削除

--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -120,16 +120,7 @@
   }
 
   const sun = new Planet(15, 0, 0);
-  const planets = [
-    /* new Planet(2, 60, 0.094),
-    new Planet(4, 90, 0.07),
-    new Planet(4, 120, 0.058), */
-    /* new Planet(3, 160, 0.048), */
-    new Planet(10, 220, 0.026),
-    /* new Planet(9, 280, 0.018),
-    new Planet(7, 340, 0.012), */
-    new Planet(7, 400, 0.01),
-  ];
+  const planets = [new Planet(10, 220, 0.026), new Planet(7, 400, 0.01)];
 
   function animate() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
