タブレットデバイスの横向きでの表示を調整

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -71,9 +71,13 @@ import Header from "./Header.astro";
     font-family: "cormorant garamond", serif;
     font-weight: 500;
     filter: drop-shadow(0 0 1rem var(--color-shadow));
-    @media (min-width: 768px) {
+    @media (min-width: 768px) and (orientation: portrait) {
       --clamp-min: 93;
       --clamp-max: 127;
+    }
+    @media (min-width: 768px) and (orientation: landscape) {
+      --clamp-min: 50;
+      --clamp-max: 80;
     }
     @media (min-width: 1025px) {
       --clamp-min: 90;
