スクリーンリーダーの読み上げの改善

--- a/src/components/BackgroundGradient.astro
+++ b/src/components/BackgroundGradient.astro
@@ -2,8 +2,8 @@
 const { color1, color2 } = Astro.props;
 ---
 
-<div class="background1"></div>
-<div class="background2"></div>
+<div role="none" class="background1"></div>
+<div role="none" class="background2"></div>
 
 <style define:vars={{ color1, color2 }}>
   .background1 {
