--- a/src/components/CanvasSolar.astro
+++ b/src/components/CanvasSolar.astro
@@ -2,7 +2,11 @@
 
 ---
 
-<canvas id="solarSystem" width="1100" height="1100"></canvas>
+<canvas
+  aria-label="太陽の周りを惑星が回っている"
+  id="solarSystem"
+  width="1100"
+  height="1100"></canvas>
 
 <script>
   const canvas = document.getElementById("solarSystem") as HTMLCanvasElement;
