--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -4,7 +4,7 @@
 
 <div class="loading-screen">
   <div class="picture-wrapper">
-    <canvas id="loading" width="1100" height="1100"></canvas>
+    <canvas role="none" id="loading" width="1100" height="1100"></canvas>
   </div>
 </div>
 
