--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -5,7 +5,9 @@ import Card from "./Card.astro";
 
 <section id="solutions">
   <GridWrapper>
-    <h2 class="category">Our <span class="color">Solutions</span></h2>
+    <h2 class="category">
+      Our <span class="color">Solutions</span>
+    </h2>
     <div class="picture-wrapper">
       <img
         src="/sunshine-solutions/images/lighted-earth.avif"
@@ -36,7 +38,7 @@ import Card from "./Card.astro";
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">常に地球の半分に明るい光を提供し、</span
-          ><br />
+          ><br role="none" />
           <span class="card__bg-line">生産性の高い環境を実現します。</span>
         </p>
       </div>
@@ -50,9 +52,15 @@ import Card from "./Card.astro";
         <h3 class="card__title">光合成サポート</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
-          <span class="card__bg-line">植物の成長に最適化された </span><br />
-          <span class="card__bg-line">光の波長を提供し、 </span><br />
-          <span class="card__bg-line">地球規模の食物連鎖と</span><br />
+          <span class="card__bg-line">植物の成長に最適化された </span><br
+            role="none"
+          />
+          <span class="card__bg-line">光の波長を提供し、 </span><br
+            role="none"
+          />
+          <span class="card__bg-line">地球規模の食物連鎖と</span><br
+            role="none"
+          />
           <span class="card__bg-line">酸素生産を支えています。 </span>
         </p>
       </div></Card
@@ -66,9 +74,15 @@ import Card from "./Card.astro";
         <h3 class="card__title">高度な視覚強化</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
-          <span class="card__bg-line">生物の視覚システムに</span><br />
-          <span class="card__bg-line">最適なスペクトルを提供し、</span><br />
-          <span class="card__bg-line">動物界全体のナビゲーションや</span><br />
+          <span class="card__bg-line">生物の視覚システムに</span><br
+            role="none"
+          />
+          <span class="card__bg-line">最適なスペクトルを提供し、</span><br
+            role="none"
+          />
+          <span class="card__bg-line">動物界全体のナビゲーションや</span><br
+            role="none"
+          />
           <span class="card__bg-line"> 社会的相互作用を促進します。</span>
         </p>
       </div></Card
@@ -83,9 +97,12 @@ import Card from "./Card.astro";
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line">私たちの光は機能的なだけでなく、</span><br
+            role="none"
           />
-          <span class="card__bg-line">自然な気分向上効果があり、</span><br />
-          <span class="card__bg-line">幸福感を促進し、</span><br />
+          <span class="card__bg-line">自然な気分向上効果があり、</span><br
+            role="none"
+          />
+          <span class="card__bg-line">幸福感を促進し、</span><br role="none" />
           <span class="card__bg-line">体内時計を調整します。</span>
         </p>
       </div></Card
@@ -93,7 +110,7 @@ import Card from "./Card.astro";
     <div class="picture-wrapper-2">
       <img
         src="/sunshine-solutions/images/heated-earth.avif"
-        alt="光に照らされた地球"
+        alt="光に照らされ、熱を帯びた地球"
         class="earth"
         width="2000"
         height="2000"
@@ -123,8 +140,10 @@ import Card from "./Card.astro";
         <p class="card__tag card__tag--walm">Heat</p>
         <p class="card__paragraph">
           <span class="card__bg-line">地球の気候システムの原動力となり、</span
-          ><br />
-          <span class="card__bg-line">多様な生命体が生息可能な</span><br />
+          ><br role="none" />
+          <span class="card__bg-line">多様な生命体が生息可能な</span><br
+            role="none"
+          />
           <span class="card__bg-line">温度範囲を確保します。</span>
         </p>
       </div></Card
@@ -140,9 +159,11 @@ import Card from "./Card.astro";
         <p class="card__paragraph">
           <span class="card__bg-line"
             >熱の分配により、地球規模の風系や
-          </span><br />
-          <span class="card__bg-line">気象システムを駆動し、</span><br />
-          <span class="card__bg-line">地球の水循環に</span><br />
+          </span><br role="none" />
+          <span class="card__bg-line">気象システムを駆動し、</span><br
+            role="none"
+          />
+          <span class="card__bg-line">地球の水循環に</span><br role="none" />
           <span class="card__bg-line">不可欠な役割を果たします。</span>
         </p>
       </div></Card
@@ -157,8 +178,10 @@ import Card from "./Card.astro";
         <p class="card__paragraph">
           <span class="card__bg-line"
             >海洋コンベアベルトにエネルギーを与え、
-          </span><br />
-          <span class="card__bg-line">栄養分の分配を促進。</span><br />
+          </span><br role="none" />
+          <span class="card__bg-line">栄養分の分配を促進。</span><br
+            role="none"
+          />
           <span class="card__bg-line">世界中の海洋生態系を支えます。</span>
         </p>
       </div></Card
@@ -174,8 +197,10 @@ import Card from "./Card.astro";
         <p class="card__paragraph">
           <span class="card__bg-line"
             >軸の傾きによる気温の変化により、
-          </span><br />
-          <span class="card__bg-line">多様な季節体験を提供し、</span><br />
+          </span><br role="none" />
+          <span class="card__bg-line">多様な季節体験を提供し、</span><br
+            role="none"
+          />
           <span class="card__bg-line"
             >生物多様性と農業サイクルを支援します。</span
           >
