--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import P5Sketch from "./P5Sketch.astro";
   <GridWrapper>
     <div class="category">Address</div>
     <div class="address">
-      Solar System Center, Milky Way Galaxy <br />
+      Solar System Center, Milky Way Galaxy <br role="none" />
       93 Million Mile Mark
     </div>
     <ul>
