--- a/src/components/Partnership.astro
+++ b/src/components/Partnership.astro
@@ -10,10 +10,10 @@ import GridWrapper from "./GridWrapper.astro";
       <h2 class="headline"><span class="number">46</span>億年の歴史</h2>
       <h3 class="sub-headline">私たちと地球の関係</h3>
       <p class="paragraph">
-        私たちは、46億年にわたり、<br />
-        地球に不可欠なエネルギーと<br />
-        光のサービスを提供してきました。<br />
-        地球と私たちの、今後も何十億年にわたる<br />
+        私たちは、46億年にわたり、<br role="none" />
+        地球に不可欠なエネルギーと<br role="none" />
+        光のサービスを提供してきました。<br role="none" />
+        地球と私たちの、今後も何十億年にわたる<br role="none" />
         素晴らしい未来を楽しみにしています。
       </p>
     </div>
