設定の変更

--- a/src/components/Partnership.astro
+++ b/src/components/Partnership.astro
@@ -19,7 +19,7 @@ import GridWrapper from "./GridWrapper.astro";
     </div>
     <div class="picture-wrapper">
       <img
-        src="/sunshine-solutions/images/triangle.avif"
+        src="/images/triangle.avif"
         alt="地球誕生から現在までの数直線"
         class="figure"
         width="2000"
