--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -10,7 +10,7 @@ import Card from "./Card.astro";
     </h2>
     <div class="picture-wrapper">
       <img
-        src="/sunshine-solutions/images/lighted-earth.avif"
+        src="/images/lighted-earth.avif"
         alt="光に照らされた地球"
         class="earth"
         width="2000"
@@ -28,11 +28,7 @@ import Card from "./Card.astro";
         <span class="bg-line">地球上の生命の未来を照らし出します。</span>
       </p>
     </div>
-    <Card
-      src="/sunshine-solutions/images/card1"
-      alt="上空から見た風景"
-      className="card-position1"
-    >
+    <Card src="/images/card1" alt="上空から見た風景" className="card-position1">
       <div class="card__text-wrapper">
         <h3 class="card__title">世界規模のサービス提供</h3>
         <p class="card__tag">Illumination</p>
@@ -44,7 +40,7 @@ import Card from "./Card.astro";
       </div>
     </Card>
     <Card
-      src="/sunshine-solutions/images/card2"
+      src="/images/card2"
       alt="光を透過する葉っぱ"
       className="card-position1"
     >
@@ -66,7 +62,7 @@ import Card from "./Card.astro";
       </div></Card
     >
     <Card
-      src="/sunshine-solutions/images/card3"
+      src="/images/card3"
       alt="草原にキリンがいる風景"
       className="card-position1"
     >
@@ -88,7 +84,7 @@ import Card from "./Card.astro";
       </div></Card
     >
     <Card
-      src="/sunshine-solutions/images/card4"
+      src="/images/card4"
       alt="山から眺める見晴らしのいい風景"
       className="card-position1"
     >
@@ -109,7 +105,7 @@ import Card from "./Card.astro";
     >
     <div class="picture-wrapper-2">
       <img
-        src="/sunshine-solutions/images/heated-earth.avif"
+        src="/images/heated-earth.avif"
         alt="光に照らされ、熱を帯びた地球"
         class="earth"
         width="2000"
@@ -131,7 +127,7 @@ import Card from "./Card.astro";
       </p>
     </div>
     <Card
-      src="/sunshine-solutions/images/card5"
+      src="/images/card5"
       alt="空から眺める雲と草原の風景"
       className="card-position1"
     >
@@ -148,11 +144,7 @@ import Card from "./Card.astro";
         </p>
       </div></Card
     >
-    <Card
-      src="/sunshine-solutions/images/card6"
-      alt="巨大な雲と虹"
-      className="card-position1"
-    >
+    <Card src="/images/card6" alt="巨大な雲と虹" className="card-position1">
       <div class="card__text-wrapper">
         <h3 class="card__title">大気のダイナミクス</h3>
         <p class="card__tag card__tag--walm">Heat</p>
@@ -168,10 +160,7 @@ import Card from "./Card.astro";
         </p>
       </div></Card
     >
-    <Card
-      src="/sunshine-solutions/images/card7"
-      alt="空から眺める海"
-      className="card-position1"
+    <Card src="/images/card7" alt="空から眺める海" className="card-position1"
       ><div class="card__text-wrapper">
         <h3 class="card__title">海流の活性化</h3>
         <p class="card__tag card__tag--walm">Heat</p>
@@ -187,7 +176,7 @@ import Card from "./Card.astro";
       </div></Card
     >
     <Card
-      src="/sunshine-solutions/images/card8"
+      src="/images/card8"
       alt="花畑と遠くに山が見える風景"
       className="card-position1"
     >
