--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,17 +17,11 @@ import Loading from "../components/Loading.astro";
   <main class="main">
     <Hero />
     <Mission />
-    <ImageSection
-      src="/sunshine-solutions/images/section1"
-      alt="森に日光が差し込む風景"
-    />
+    <ImageSection src="/images/section1" alt="森に日光が差し込む風景" />
     <Solution />
-    <ImageSection src="/sunshine-solutions/images/section2" alt="海辺の風景" />
+    <ImageSection src="/images/section2" alt="海辺の風景" />
     <Partnership />
-    <ImageSection
-      src="/sunshine-solutions/images/section3"
-      alt="上空から眺める海の風景"
-    />
+    <ImageSection src="/images/section3" alt="上空から眺める海の風景" />
     <Footer />
   </main>
 </Layout>
