--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,22 +10,22 @@ import Header from "./Header.astro";
   <picture class="hero">
     <source
       media="(min-width: 1025px)"
-      srcset="/sunshine-solutions/images/hero-4k.avif 3840w,/sunshine-solutions/images/hero-3k.avif 2880w,/sunshine-solutions/images/hero-2k.avif 1920w"
+      srcset="/images/hero-4k.avif 3840w,/sunshine-solutions/images/hero-3k.avif 2880w,/sunshine-solutions/images/hero-2k.avif 1920w"
       sizes="100vw"
       type="image/avif"
     />
     <source
       media="(min-width: 768px)"
-      srcset="/sunshine-solutions/images/hero-tab.avif"
+      srcset="/images/hero-tab.avif"
       type="image/avif"
     />
     <source
       media="(max-width: 767px)"
-      srcset="/sunshine-solutions/images/hero-sp.avif"
+      srcset="/images/hero-sp.avif"
       type="image/avif"
     />
     <img
-      src="/sunshine-solutions/images/hero.jpg"
+      src="/images/hero.jpg"
       alt="朝日が登る風景"
       width="3840"
       height="2160"
