リンクの不具合を修正

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import Header from "./Header.astro";
   <picture class="hero">
     <source
       media="(min-width: 1025px)"
-      srcset="/images/hero-4k.avif 3840w,/sunshine-solutions/images/hero-3k.avif 2880w,/sunshine-solutions/images/hero-2k.avif 1920w"
+      srcset="/images/hero-4k.avif 3840w,/images/hero-3k.avif 2880w,/images/hero-2k.avif 1920w"
       sizes="100vw"
       type="image/avif"
     />
