--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import Header from "./Header.astro";
 ---
 
-<div id="hero" class="container">
+<section id="hero" class="container">
   <Header />
   <h2>
     <p>Constant.&NewLine; Illuminating.&NewLine; Eternal.</p>
@@ -31,7 +31,7 @@ import Header from "./Header.astro";
       height="2160"
     />
   </picture>
-</div>
+</section>
 
 <style>
   .container {
